--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,7 +37,9 @@ body *{
 footer{
   text-align: center;
 }
-
+a{
+  text-decoration: none;
+}
 a, a:hover, a:focus, a:visited{
   color: #41B883;
 }
@@ -53,5 +55,6 @@ a, a:hover, a:focus, a:visited{
 .page-enter, .page-leave-active{
   opacity: 0
 }
+
 
 
