register and login components

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@
 }
 
 .layout-blank{
-  background-color: #666;
+  /*background-color: #666;*/
   color: #2e2f30;
   letter-spacing: 0.5px;
   font-family: "Source Sans Pro", Arial, sans-serif;
